--- a/frontend/src/components/Header/main.css
+++ b/frontend/src/components/Header/main.css
@@ -9,6 +9,7 @@
   height: 6em;
   justify-content: center;
   margin: auto;
+  margin-bottom: 4em;
   margin-top: 1em;
   max-width: 48em;
   width: 80%;
@@ -20,4 +21,13 @@
   font-size: 26px;
   font-weight: bold;
   text-align: center;
+}
+
+.header-title-text {
+  color: rgb(248, 248, 248);
+  font-family: poppins, sans-serif;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+  margin-top: 4px;
 }
